--- a/src/behaviors/fab-animation-behavior.html
+++ b/src/behaviors/fab-animation-behavior.html
@@ -44,7 +44,7 @@
         }
       },
       animateEditViewFab:function(){
-        this.$.editFab.style.left=this.$$(".pageCard").offsetLeft + this.$$(".pageCard").offsetWidth - this.$.editFab.offsetWidth/2 + "px";
+        this.$.editFab.style.left=this.$$(".pageCard").offsetLeft + this.$$(".pageCard").offsetWidth - (this.$$(".pageCard").offsetWidth*.05) - this.$.editFab.offsetWidth/2 + "px";
         this.playAnimation("editState", "edit");
       },
       animateMultiViewFab:function(){
@@ -52,7 +52,7 @@
       },
       _neonAnimationFinish:function(e){
         if(e.detail==="edit"){
-          this.$.editFab.style.left=this.$$(".pageCard").offsetLeft + this.$$(".pageCard").offsetWidth - this.$.editFab.offsetWidth/2 + "px";
+          this.$.editFab.style.left=this.$$(".pageCard").offsetLeft + this.$$(".pageCard").offsetWidth - (this.$$(".pageCard").offsetWidth*.05) - this.$.editFab.offsetWidth/2 + "px";
           this.$.regFab.style.opacity=0;
           this.$.regFab.disabled=true;
           this.$.editFab.style.opacity=1;
