--- a/src/elements/guuey-slider/guuey-slider.html
+++ b/src/elements/guuey-slider/guuey-slider.html
@@ -38,13 +38,13 @@
         position:absolute;
         bottom:5px;
         left:5px;
-        color:blue;
+        color:#43A047;
       }
       #danger{
         position:absolute;
         bottom:5px;
         right:5px;
-        color:red;
+        color:#E53935;
       }
     </style>
 
