--- a/src/pages/care-plan/su-care-review/su-care-review-multi-view.html
+++ b/src/pages/care-plan/su-care-review/su-care-review-multi-view.html
@@ -164,43 +164,43 @@
         var date=new Date(date).getMonth();
         switch(date) {
           case 0:
-              return "images/risks/movingHandling.png";
+              return "images/reviews/01jan.png";
               break;
           case 1:
-              return "images/risks/slipsTrips.png";
+              return "images/reviews/02feb.png";
               break;
           case 2:
-              return "images/risks/violenceAgression.png";
+              return "images/reviews/03mar.png";
               break;
           case 3:
-              return "images/risks/falls.png";
+              return "images/reviews/04apr.png";
               break;
           case 4:
-              return "images/risks/scaldingBurning.png";
+              return "images/reviews/05may.png";
               break;
           case 5:
-              return "images/risks/bedrailEntrapment.png";
+              return "images/reviews/06jun.png";
               break;
           case 6:
-              return "images/risks/legionella.png";
+              return "images/reviews/07jul.png";
               break;
           case 7:
-              return "images/risks/legionella.png";
+              return "images/reviews/08aug.png";
               break;
           case 8:
-              return "images/risks/legionella.png";
+              return "images/reviews/09sep.png";
               break;
           case 9:
-              return "images/risks/legionella.png";
+              return "images/reviews/10oct.png";
               break;
           case 10:
-              return "images/risks/legionella.png";
+              return "images/reviews/11nov.png";
               break;
           case 11:
-              return "images/risks/legionella.png";
+              return "images/reviews/12dec.png";
               break;
           default:
-              return "images/risks/other.png";
+              return "images/reviews/other.png";
               break;
         };
       },
