--- a/src/pages/test/test-test/test-test.html
+++ b/src/pages/test/test-test/test-test.html
@@ -3,6 +3,8 @@
 <link rel="import" href="../../../../bower_components/paper-input/paper-textarea.html" />
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html" />
 <link rel="import" href="../../../styles/common-styles.html" />
+<link rel="import" href="../../../icons/custom-icons.html" />
+<link rel="import" href="../../../../bower_components/iron-icon/iron-icon.html" />
 <!--
 `image-editor`
 image editor
@@ -25,6 +27,8 @@ image editor
     </style>
 
     <paper-card class="pageCard">
+
+      icon test: <iron-icon icon="custom:su-drawer"></iron-icon>
 
       <div class="pageInnerCont">
         <template is="dom-repeat" items="[[suList]]" as="dick">
