--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -38,3 +38,5 @@
 <link rel="import" href="behaviors/shell-resize-behavior.html" />
 
 <link rel="import" href="styles/app-shell-styles.html" />
+
+<link rel="import" href="icons/custom-icons.html" />
