updated su-drawer to have scrolling behavior until we can find a better way to display links in one go. updated su-view-report with better styling

--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -57,6 +57,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       background-color: inherit;
     }
     #suDrawer{
+      overflow:auto;
       text-align:left;
       --app-drawer-content-container:{
         background-color:#f2f2f2;
