--- a/src/pages/care-plan/su-view-reports/dependencies.html
+++ b/src/pages/care-plan/su-view-reports/dependencies.html
@@ -12,6 +12,7 @@
 <link rel="import" href="../../../../bower_components/iron-collapse/iron-collapse.html" />
 <link rel="import" href="../../../../bower_components/paper-progress/paper-progress.html" />
 <link rel="import" href="../../../../bower_components/google-chart/google-chart.html" />
+<link rel="import" href="../../../../bower_components/paper-tabs/paper-tabs.html" />
 
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../elements/media-queries/media-queries.html" />
