--- a/src/pages/care-plan/su-view-reports/su-view-reports.html
+++ b/src/pages/care-plan/su-view-reports/su-view-reports.html
@@ -11,13 +11,15 @@
     <firebase-query
       id="reportsDB"
       app-name="main"
-      data="{{reportsData}}"
-      path="homes/[[home]]/patients/[[patient]]/dailyReports"
-      start-at="1478646000000"
-      end-at="1480719600000">
+      data="{{reportsData}}">
     </firebase-query>
 
     <style include="common-styles">
+
+      :host{
+        --app-grid-columns:2;
+        --app-grid-expandible-item-columns:2;
+      }
 
       .reportExpand{
         background-color:#F5F2F2;
@@ -40,6 +42,9 @@
         --paper-input-container-disabled:{
           opacity:.9;
         };
+        --paper-input-container-underline-disabled:{
+          display:none;
+        }
       }
       .reportSection paper-progress{
         width:100%;
@@ -59,6 +64,74 @@
         flex-grow:1;
         margin:20px;
       }
+      #reportSelector{
+        --paper-tabs-selection-bar-color:#009688;
+      }
+      paper-tab{
+        --paper-tab-ink:#009688;
+      }
+      paper-tab.iron-selected{
+        color:#009688;
+      }
+      .morning{
+        border-left:#FFC200 5px solid;
+        padding:20px;
+      }
+      .morning h3{
+        color:#FFC200;
+        text-transform:uppercase;
+        display:inline-block;
+        margin-right:20px;
+      }
+      .afternoon{
+        border-left:#FF5607 5px solid;
+        padding:20px;
+      }
+      .afternoon h3{
+        color:#FF5607;
+        text-transform:uppercase;
+      }
+      .night{
+        border-left:#6735BA 5px solid;
+        padding:20px;
+      }
+      .night h3{
+        color:#6735BA;
+        text-transform:uppercase;
+      }
+      .dateSub{
+        display:inline-block;
+        opacity:.5;
+      }
+      .attrText{
+        display:inline-block;
+        text-transform:uppercase;
+        opacity:.8;
+        margin-right:20px;
+      }
+      .percentage{
+        display:inline-block;
+        font-size:24px;
+        font-weight:bold;
+      }
+      .bad{
+        color:#E53935;
+        --paper-progress-active-color:#E53935;
+      }
+      .badProgress:{
+
+      }
+      .ok{
+        color:#F57C00;
+        --paper-progress-active-color:#F57C00;
+      }
+      .good{
+        color:#43A047;
+        --paper-progress-active-color:#43A047;
+      }
+      .full{
+        @apply(--app-grid-expandible-item);
+      }
     </style>
 
     <paper-card class="pageCard">
@@ -70,25 +143,46 @@
         su-index-data="{{suIndexData}}"
         setimage>
       </su-header>
-      <div class="pageInnerCont padded">
-        <div class="innerMenu">
-          <paper-button on-tap="viewThisDay" raised>display today</paper-button>
-          <paper-button on-tap="viewThisWeek" raised>display this week</paper-button>
-          <paper-button on-tap="viewThisMonth" raised>display this month</paper-button>
-          <vaadin-combo-box id="selectYear" items="[[yearList]]" label="Year" value="{{selectDate.year}}"></vaadin-combo-box>
-          <vaadin-combo-box id="selectMonth" items="[[monthList]]" label="Month" value="{{selectDate.month}}"></vaadin-combo-box>
-        </div>
-        <!--
-        <paper-button on-tap="viewThisYear" raised>display this year</paper-button>
-        -->
+      <div class="pageInnerCont">
+        <paper-card elevation="3" class="subCard">
 
-        <google-chart
-          id="healthGraph"
-          type='line'
-          options='{"title": "Health Over Time"}'
-          cols='[{"label":"day", "type":"string"}, {"label":"Health", "type":"number"}, {"label":"Mood", "type":"number"}]'
-          rows='[[graphRows]]'>
-        </google-chart>
+          <paper-tabs id="reportSelector" selected="0">
+            <paper-tab on-tap="viewThisDay">DISPLAY TODAY</paper-tab>
+            <paper-tab on-tap="viewThisWeek">DISPLAY THIS WEEK</paper-tab>
+            <paper-tab on-tap="viewThisMonth">DISPLAY THIS MONTH</paper-tab>
+            <paper-tab on-tap="chooseDate">CHOOSE DATE</paper-tab>
+          </paper-tabs>
+          <iron-collapse opened id="dateDisplay">
+
+            <div class="innerMenu">
+              <p class="dateSub">
+                [[graphDate]]
+              </p>
+            </div>
+
+          </iron-collapse>
+
+          <iron-collapse id="dateSelector">
+
+            <div class="innerMenu">
+              <vaadin-combo-box id="selectYear" items="[[yearList]]" label="Custom Year" value="{{selectDate.year}}"></vaadin-combo-box>
+              <vaadin-combo-box id="selectMonth" items="[[monthList]]" label="Custom Month" value="{{selectDate.month}}"></vaadin-combo-box>
+            </div>
+
+          </iron-collapse>
+          <!--
+          <paper-button on-tap="viewThisYear" raised>display this year</paper-button>
+          -->
+
+          <google-chart
+            id="healthGraph"
+            type='line'
+            options='{"title": "Health Over Time"}'
+            cols='[{"label":"day", "type":"string"}, {"label":"Health", "type":"number"}, {"label":"Mood", "type":"number"}]'
+            rows='[[graphRows]]'>
+          </google-chart>
+
+        </paper-card>
 
         <template is="dom-repeat" items="[[reportsData]]" as="report">
 
@@ -96,143 +190,201 @@
             <h2>[[_computeReadableDate(report.$key)]]</h2>
           </paper-item>
           <iron-collapse class="reportSection" id="r[[report.$key]]">
-            <h3>Morning</h3>
-            <p>
-              Health: [[report.morning.health]]/100
-            </p>
-            <paper-progress min="0" max="100" value="[[report.morning.health]]"></paper-progress>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Health Comments"
-              value="[[report.morning.healthComments]]">
-            </paper-textarea>
-            <p>
-              Mood: [[report.morning.mood]]/100
-            </p>
-            <paper-progress min="0" max="100" value="[[report.morning.mood]]"></paper-progress>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Mood Comments"
-              value="[[report.morning.moodComments]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Activities"
-              value="[[report.morning.activities]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Incidents"
-              value="[[report.morning.incidents]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Locations Visited"
-              value="[[report.morning.locations]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Summary"
-              value="[[report.morning.summaryOfChunk]]">
-            </paper-textarea>
+            <div class="morning app-grid">
+              <div class="full">
+                <h3>Morning</h3><p class="dateSub">[[_computeReadableDate(report.$key)]]</p>
+              </div>
+              <div class="padded">
+                <p class="attrText">
+                  Health
+                </p>
+                <p class$="[[_computeStatusColor(report.morning.health)]]">
+                  [[report.morning.health]]%
+                </p>
+                <paper-progress class$="[[_computeProgressColor(report.morning.health)]]" min="0" max="100" value="[[report.morning.health]]"></paper-progress>
+                <paper-textarea
+                  class="reportText"
+                  disabled
+                  label="Health Comments"
+                  value="[[report.morning.healthComments]]">
+                </paper-textarea>
+              </div>
 
-            <h3>Afternoon</h3>
-            <p>
-              Health: [[report.afternoon.health]]/100
-            </p>
-            <paper-progress min="0" max="100" value="[[report.afternoon.health]]"></paper-progress>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Health Comments"
-              value="[[report.afternoon.healthComments]]">
-            </paper-textarea>
-            <p>
-              Mood: [[report.afternoon.mood]]/100
-            </p>
-            <paper-progress min="0" max="100" value="[[report.afternoon.mood]]"></paper-progress>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Mood Comments"
-              value="[[report.afternoon.moodComments]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Activities"
-              value="[[report.afternoon.activities]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Incidents"
-              value="[[report.afternoon.incidents]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Locations Visited"
-              value="[[report.afternoon.locations]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Summary"
-              value="[[report.afternoon.summaryOfChunk]]">
-            </paper-textarea>
+              <div class="padded">
+                <p class="attrText">
+                  Mood
+                </p>
+                <p class$="[[_computeStatusColor(report.morning.mood)]]">
+                  [[report.morning.mood]]%
+                </p>
+                <paper-progress class$="[[_computeProgressColor(report.morning.mood)]]" min="0" max="100" value="[[report.morning.mood]]"></paper-progress>
+                <paper-textarea
+                  class="reportText"
+                  disabled
+                  label="Mood Comments"
+                  value="[[report.morning.moodComments]]">
+                </paper-textarea>
+              </div>
 
-            <h3>Night</h3>
-            <p>
-              Health: [[report.night.health]]/100
-            </p>
-            <paper-progress min="0" max="100" value="[[report.night.health]]"></paper-progress>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Health Comments"
-              value="[[report.night.healthComments]]">
-            </paper-textarea>
-            <p>
-              Mood: [[report.night.mood]]/100
-            </p>
-            <paper-progress min="0" max="100" value="[[report.night.mood]]"></paper-progress>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Mood Comments"
-              value="[[report.night.moodComments]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Activites"
-              value="[[report.night.activities]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Incidents"
-              value="[[report.night.incidents]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Locations Visited"
-              value="[[report.night.locations]]">
-            </paper-textarea>
-            <paper-textarea
-              class="reportText"
-              disabled
-              label="Summary"
-              value="[[report.night.summaryOfChunk]]">
-            </paper-textarea>
+              <paper-textarea
+                class="reportText full"
+                disabled
+                label="Activities"
+                value="[[report.morning.activities]]">
+              </paper-textarea>
+              <paper-textarea
+                class="reportText full"
+                disabled
+                label="Incidents"
+                value="[[report.morning.incidents]]">
+              </paper-textarea>
+              <paper-textarea
+                class="reportText full"
+                disabled
+                label="Locations Visited"
+                value="[[report.morning.locations]]">
+              </paper-textarea>
+              <paper-textarea
+                class="reportText full"
+                disabled
+                label="Summary"
+                value="[[report.morning.summaryOfChunk]]">
+              </paper-textarea>
+            </div>
+
+            <div class="divider">
+
+            </div>
+
+            <div class="afternoon app-grid">
+              <div class="full">
+                <h3>Afternoon</h3><p class="dateSub">[[_computeReadableDate(report.$key)]]</p>
+              </div>
+              <div class="padded">
+                <p class="attrText">
+                  Health
+                </p>
+                <p class$="[[_computeStatusColor(report.afternoon.health)]]">
+                  [[report.afternoon.health]]%
+                </p>
+                <paper-progress class$="[[_computeProgressColor(report.afternoon.health)]]" min="0" max="100" value="[[report.afternoon.health]]"></paper-progress>
+                <paper-textarea
+                  class="reportText"
+                  disabled
+                  label="Health Comments"
+                  value="[[report.afternoon.healthComments]]">
+                </paper-textarea>
+              </div>
+
+              <div class="padded">
+                <p class="attrText">
+                  Mood
+                </p>
+                <p class$="[[_computeStatusColor(report.afternoon.mood)]]">
+                  [[report.afternoon.mood]]%
+                </p>
+                <paper-progress class$="[[_computeProgressColor(report.afternoon.mood)]]" min="0" max="100" value="[[report.afternoon.mood]]"></paper-progress>
+                <paper-textarea
+                  class="reportText"
+                  disabled
+                  label="Mood Comments"
+                  value="[[report.afternoon.moodComments]]">
+                </paper-textarea>
+              </div>
+
+              <paper-textarea
+                class="reportText full"
+                disabled
+                label="Activities"
+                value="[[report.afternoon.activities]]">
+              </paper-textarea>
+              <paper-textarea
+                class="reportText full"
+                disabled
+                label="Incidents"
+                value="[[report.afternoon.incidents]]">
+              </paper-textarea>
+              <paper-textarea
+                class="reportText full"
+                disabled
+                label="Locations Visited"
+                value="[[report.afternoon.locations]]">
+              </paper-textarea>
+              <paper-textarea
+                class="reportText full"
+                disabled
+                label="Summary"
+                value="[[report.afternoon.summaryOfChunk]]">
+              </paper-textarea>
+            </div>
+
+            <div class="divider">
+
+            </div>
+
+            <div class="night">
+              <div class="full">
+                <h3>Night</h3><p class="dateSub">[[_computeReadableDate(report.$key)]]</p>
+              </div>
+
+              <div class="padded">
+                <p class="attrText">
+                  Health
+                </p>
+                <p class$="[[_computeStatusColor(report.night.health)]]">
+                  [[report.night.health]]%
+                </p>
+                <paper-progress class$="[[_computeProgressColor(report.night.health)]]" min="0" max="100" value="[[report.night.health]]"></paper-progress>
+                <paper-textarea
+                  class="reportText"
+                  disabled
+                  label="Health Comments"
+                  value="[[report.night.healthComments]]">
+                </paper-textarea>
+              </div>
+
+              <div class="padded">
+                <p class="attrText">
+                  Mood
+                </p>
+                <p class$="[[_computeStatusColor(report.night.mood)]]">
+                  [[report.night.mood]]%
+                </p>
+                <paper-progress class$="[[_computeProgressColor(report.night.mood)" min="0" max="100" value="[[report.night.mood]]"></paper-progress>
+                <paper-textarea
+                  class="reportText"
+                  disabled
+                  label="Mood Comments"
+                  value="[[report.night.moodComments]]">
+                </paper-textarea>
+              </div>
+              
+              <paper-textarea
+                class="reportText"
+                disabled
+                label="Activites"
+                value="[[report.night.activities]]">
+              </paper-textarea>
+              <paper-textarea
+                class="reportText"
+                disabled
+                label="Incidents"
+                value="[[report.night.incidents]]">
+              </paper-textarea>
+              <paper-textarea
+                class="reportText"
+                disabled
+                label="Locations Visited"
+                value="[[report.night.locations]]">
+              </paper-textarea>
+              <paper-textarea
+                class="reportText"
+                disabled
+                label="Summary"
+                value="[[report.night.summaryOfChunk]]">
+              </paper-textarea>
+            </div>
+
           </iron-collapse>
 
         </template>
@@ -249,6 +401,8 @@
         this.fire("pageLoaded",{page:this.page});
         this._computeYearList();
         this.$.selectYear.value=this._computeCurrentYear();
+        this.viewThisDay();
+        this.setDateRangeDisplay();
       },
       properties:{
         selectDate:{
@@ -304,6 +458,7 @@
         this.$.selectYear.value=null;
         this.$.reportsDB.startAt = now.toString();
         this.$.reportsDB.endAt = now.toString();
+        this.$.reportsDB.path = "homes/"+this.home+"/patients/"+this.patient+"/dailyReports";
       },
       viewThisWeek:function(){
         var date = new Date();
@@ -384,6 +539,7 @@
           var end = endDate.getTime()-1;
           this.$.reportsDB.startAt = now.toString();
           this.$.reportsDB.endAt = end.toString();
+          this.graphDate = this.monthList[months] + " " + years;
         };
       },
       _computeYearList:function(){
@@ -395,6 +551,41 @@
       _computeCurrentYear:function(){
         var date = new Date();
         return date.getFullYear();
+      },
+      _computeStatusColor:function(number){
+        var int = parseInt(number);
+        if(int<=33){
+          return "percentage bad";
+        };
+        if(int>34 && int<=66){
+          return "percentage ok";
+        };
+        if(int>66){
+          return "percentage good";
+        };
+      },
+      _computeProgressColor:function(number){
+        var int = parseInt(number);
+        if(int<=33){
+          return "bad";
+        };
+        if(int>34 && int<=66){
+          return "ok";
+        };
+        if(int>66){
+          return "good";
+        };
+      },
+      setDateRangeDisplay(){
+        var date = new Date();
+        var months = date.getMonth();
+        var years = date.getFullYear();
+        var vagueDate = new Date(years, months);
+        this.graphDate = this.monthList[months] + " " + years;
+      },
+      chooseDate:function(){
+        this.$.dateSelector.toggle();
+        this.$.dateDisplay.toggle();
       }
     });
 
